lib/ephy-prefs.h
@@ -37,6 +37,12 @@ typedef enum
 
 typedef enum
 {
+	EPHY_PREFS_RESTORE_SESSION_POLICY_ALWAYS,
+	EPHY_PREFS_RESTORE_SESSION_POLICY_NEVER
+} EphyPrefsRestoreSessionPolicy;
+
+typedef enum
+{
 	EPHY_PREFS_WEB_COOKIES_POLICY_ALWAYS,
 	EPHY_PREFS_WEB_COOKIES_POLICY_NO_THIRD_PARTY,
 	EPHY_PREFS_WEB_COOKIES_POLICY_NEVER
@@ -105,6 +111,7 @@ typedef enum
 #define EPHY_PREFS_ENABLE_CARET_BROWSING	"enable-caret-browsing"
 #define EPHY_PREFS_ENABLED_EXTENSIONS		"enabled-extensions"
 #define EPHY_PREFS_INTERNAL_VIEW_SOURCE		"internal-view-source"
+#define EPHY_PREFS_RESTORE_SESSION_POLICY       "restore-session-policy"
 
 #define EPHY_PREFS_LOCKDOWN_SCHEMA		"org.gnome.Epiphany.lockdown"
 #define EPHY_PREFS_LOCKDOWN_FULLSCREEN		"disable-fullscreen"
